force-app/main/default/objects/Onboarding_Application__c/Onboarding_Application__c.object-meta.xml
<CustomObject>
    <label>Onboarding Application</label>
    <nameField>
        <displayFormat>OA-{0000}</displayFormat>
        <label>Onboarding Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>