force-app/main/default/objects/Onboarding_Application__c/fields/Advisory_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services_Required__c</fullName>
    <description>Types of advisory services the client requires.</description>
    <label>Advisory Services Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Market_Insights</fullName>
                <label>Market Insights</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Regulatory_Guidance</fullName>
                <label>Regulatory Guidance</label>
            </value>
            <value>
                <fullName>Risk_Management</fullName>
                <label>Risk Management</label>
            </value>
            <value>
                <fullName>Treasury_Strategy</fullName>
                <label>Treasury Strategy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>