force-app/main/default/objects/Onboarding_Application__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel where the onboarding application was initiated.</description>
    <inlineHelpText>Distinguishes Experience Cloud public forms from internal or API submissions.</inlineHelpText>
    <label>Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>ExperienceCloud</fullName>
                <default>true</default>
                <label>Experience Cloud</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>