force-app/main/default/objects/Onboarding_Application__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <description>The client name derived from the onboarding form. For Private clients this is the full name (First Last). For Corporate clients this is the Legal Entity Name.</description>
    <label>Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>