force-app/main/default/objects/Onboarding_Application__c/fields/Client_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Notes__c</fullName>
    <description>Client-provided notes, corrections, or missing information regarding the onboarding application.</description>
    <label>Client Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>