force-app/main/default/objects/Onboarding_Application__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private individual</fullName>
            </value>
            <value>
                <fullName>Corporate entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>