force-app/main/default/objects/Onboarding_Application__c/fields/Created_From_IP__c.field-meta.xml
<CustomField>
    <fullName>Created_From_IP__c</fullName>
    <description>IP address of the client when submitting the public onboarding form.</description>
    <label>Created From IP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>