force-app/main/default/objects/Onboarding_Application__c/fields/Crypto_Average_Transaction_Size__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Average_Transaction_Size__c</fullName>
    <description>Average digital asset transaction size in base currency.</description>
    <label>Crypto Average Transaction Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>