force-app/main/default/objects/Onboarding_Application__c/fields/Crypto_Expected_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Crypto_Expected_Monthly_Volume__c</fullName>
    <description>Expected monthly digital asset transaction volume in base currency.</description>
    <label>Crypto Expected Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>