force-app/main/default/objects/Onboarding_Application__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>Date and time when the onboarding application reached a final decision.</description>
    <label>Decision Date</label>
    <type>DateTime</type>
</CustomField>