force-app/main/default/objects/Onboarding_Application__c/fields/Digital_Assets__c.field-meta.xml
<CustomField>
    <fullName>Digital_Assets__c</fullName>
    <description>Digital assets the client wants to buy, sell, or hold.</description>
    <label>Digital Assets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>ETH</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>USDC</fullName>
            </value>
            <value>
                <fullName>USDT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>