force-app/main/default/objects/Onboarding_Application__c/fields/Existing_Advisory_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Existing_Advisory_Relationships__c</fullName>
    <description>Description of existing advisory relationships.</description>
    <label>Existing Advisory Relationships</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>