force-app/main/default/objects/Onboarding_Application__c/fields/FX_Average_Trade_Size__c.field-meta.xml
<CustomField>
    <fullName>FX_Average_Trade_Size__c</fullName>
    <description>Average FX trade size in base currency.</description>
    <label>FX Average Trade Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>