force-app/main/default/objects/Onboarding_Application__c/fields/FX_Currency_Pairs__c.field-meta.xml
<CustomField>
    <fullName>FX_Currency_Pairs__c</fullName>
    <description>Currency pairs the client wants to trade or transact in.</description>
    <label>FX Currency Pairs</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>