force-app/main/default/objects/Onboarding_Application__c/fields/FX_Expected_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>FX_Expected_Monthly_Volume__c</fullName>
    <description>Expected monthly FX trade volume in base currency.</description>
    <label>FX Expected Monthly Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>