force-app/main/default/objects/Onboarding_Application__c/fields/FX_Forward_Contracts_Required__c.field-meta.xml
<CustomField>
    <fullName>FX_Forward_Contracts_Required__c</fullName>
    <description>Whether forward contracts or hedging are required for FX services.</description>
    <label>FX Forward Contracts/Hedging Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>