force-app/main/default/objects/Onboarding_Application__c/fields/FX_Hedging_Needs__c.field-meta.xml
<CustomField>
    <fullName>FX_Hedging_Needs__c</fullName>
    <description>Description of hedging needs if forward contracts are required.</description>
    <label>FX Hedging Needs</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>