force-app/main/default/objects/Onboarding_Application__c/fields/Is_VASP__c.field-meta.xml
<CustomField>
    <fullName>Is_VASP__c</fullName>
    <description>Whether the client is a Virtual Asset Service Provider or operating on behalf of one.</description>
    <label>Is VASP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>