force-app/main/default/objects/Onboarding_Application__c/fields/KYC_Tier__c.field-meta.xml
<CustomField>
    <fullName>KYC_Tier__c</fullName>
    <description>KYC level required based on risk (simplified, standard, enhanced).</description>
    <inlineHelpText>Helps drive which documents and checks are required.</inlineHelpText>
    <label>KYC Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Simplified</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>