force-app/main/default/objects/Onboarding_Application__c/fields/Overall_Risk_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Risk_Rating__c</fullName>
    <description>Final risk rating assigned to this application after assessment.</description>
    <inlineHelpText>Used by Compliance to decide if enhanced due diligence is required.</inlineHelpText>
    <label>Overall Risk Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Prohibited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>