force-app/main/default/objects/Onboarding_Application__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact created or linked when the application is approved.</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Onboarding Applications (Primary Contact)</relationshipLabel>
    <relationshipName>Contact_Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>