force-app/main/default/objects/Onboarding_Application__c/fields/Risk_Appetite__c.field-meta.xml
<CustomField>
    <fullName>Risk_Appetite__c</fullName>
    <description>Client&apos;s risk appetite for advisory services.</description>
    <label>Risk Appetite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>