force-app/main/default/objects/Onboarding_Application__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date and time when the client submitted the public onboarding form.</description>
    <inlineHelpText>Populate from the LWC or Flow when the client presses Submit.</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>