force-app/main/default/objects/Onboarding_Application__c/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account created or linked when this application is approved.</description>
    <label>Target Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Applications</relationshipLabel>
    <relationshipName>Account_Onboarding_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>