force-app/main/default/objects/Onboarding_Application__c/fields/Time_Horizon_Years__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon_Years__c</fullName>
    <description>Time horizon for investment decisions in years.</description>
    <label>Time Horizon (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>