force-app/main/default/objects/Onboarding_Application__c/fields/User_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Agent__c</fullName>
    <description>Browser user agent captured from the public onboarding form (optional).</description>
    <label>User Agent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>