force-app/main/default/objects/Onboarding_Application__c/listViews/Recent_Applications.listView-meta.xml
<ListView>
    <fullName>Recent_Applications</fullName>
    <columns>NAME</columns>
    <columns>Client_Name__c</columns>
    <columns>Application_Type__c</columns>
    <columns>Client_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Current_Step__c</columns>
    <columns>Target_Account__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Applications</label>
</ListView>